--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,108 +8,9 @@ body {
   margin: 0;
   color: $base-font-color;
   font-family: $font-family;
-  line-height: 1.5;
+  line-height: 1.9;
   -webkit-text-size-adjust: 100%;
 }
 
-// Reset css
-div,
-span,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-pre,
-a,
-address,
-code,
-del,
-em,
-img,
-small,
-strong,
-sub,
-sup,
-b,
-i,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-main,
-nav,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-weight: 400;
-}
-
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-a {
-  text-decoration: none;
-}
-
-ul,
-li {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-}
-
-button {
-  margin: 0;
-  padding: 0;
-  font-size: inherit;
-}
-
-textarea {
-  resize: vertical;
-}
-
-input[type='number'] {
-  -moz-appearance: textfield;
-}
+/* A Modern CSS Reset */
+*,*::before,*::after{box-sizing:border-box}ul[class],ol[class]{padding:0}body,h1,h2,h3,h4,p,ul[class],ol[class],figure,blockquote,dl,dd{margin:0}html{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeSpeed;}ul[class],ol[class]{list-style:none}a:not([class]){text-decoration-skip-ink:auto}img{max-width:100%;display:block}article>*+*{margin-top:1em}input,button,textarea,select{font:inherit}img:not([alt]){filter:blur(10px)}@media(prefers-reduced-motion:reduce){*{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}
